k8s/installation/template/addons/efk/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    k8s-app: logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
