k8s/installation/template/addons/efk/01-storageclass.yaml
# create autoscale persistentVolume
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-provisioner-system
  namespace: kube-system
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: nfs-provisioner-system
  template:
    metadata:
      labels:
        k8s-app: nfs-provisioner-system
    spec:
      serviceAccountName: nfs-client-provisioner-system
      containers:
      - name: nfs-client-provisioner-system
        image: ${DOCKER_HUB}/quay.io/external_storage/nfs-client-provisioner:v3.1.0-k8s1.11
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: nfs-client-root
          mountPath: /persistentvolumes
      volumes:
      - name: nfs-client-root
        nfs:
          server: ${NFS_SERVER}
          path: ${NFS_PATH}
