k8s/installation/template/addons/efk/10-elasticsearch-deploy-all.yaml
# Deploying ElasticSearch
# Including RBAC, ConfigMap, Secret, Deployment

---
# ElasticSearch deployment (Statefulset)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging
    version: 7.12.0
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  serviceName: elasticsearch-logging
  replicas: 1
  selector:
    matchLabels:
      k8s-app: elasticsearch-logging
      version: 7.12.0
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-logging
        version: 7.12.0
    spec:
      serviceAccountName: elasticsearch-logging
      containers:
      - name: elasticsearch-logging
        image: ${DOCKER_HUB}/elasticsearch:7.12.0
        imagePullPolicy: IfNotPresent
        resources:
          # need more cpu upon initializtion, therefore burstatble class
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 60
          timeoutSeconds: 10
        readinessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 60
          timeoutSeconds: 5
        volumeMounts:
        - name: elasticsearch-logging
          mountPath: /data
        - name: config-volume
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
      volumes:
      - name: config-volume
        configMap:
          name: es-config-7.12.0
      - name: elasticsearch-logging
        persistentVolumeClaim:
          claimName: elasticsearch-logging-claim

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Elasticsearch"
spec:
  selector:
    k8s-app: elasticsearch-logging
  ports:
  - port: 9200
    protocol: TCP
    targetPort: db
