k8s/installation/template/addons/efk/33-kibana-ingress.yaml
# ingress for kibana
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-logging
  namespace: logging
  annotations:
    kubernetes.io/ingress.allow-https: "false"
    nginx.ingress.kubernetes.io/rewrite: /
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.k8s.vm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-logging
            port:
              number: 5601
